samples/_failures_safe/1761419057_b1c746_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ecc72d46.c: In function ‘main’:
./samples/SAFE/__tmp_ecc72d46.c:140:5: error: expected expression at end of input
  140 |     if (!process_text(&analyzer,
      |     ^~
./samples/SAFE/__tmp_ecc72d46.c:140:5: error: expected declaration or statement at end of input
